# USU

./: README.md  newOtherFile  newfile.txt  slakdfjlsakdj
2014/: README.md
2014/CS1400/Assignment 11 - Lunar Landing/: lunarLander.h
2014/MIS2100/: README.md
2015/: README.md
2015/CS1410/assignment 0 - calculator/: Calculator.hpp
2015/CS1410/assignment 1 - google search/: ThansferTest.cpp
2015/CS1410/assignment 9 - linked list/: 1410assignment9.sln
2015/CS2420/: GritSuccess.docx  ~$p04F15.docx
2015/CS2420/a3/: Board.cpp  Board.h  BoardNode.cpp  BoardNode.h  BoardQueue.cpp  BoardQueue.h  CMakeLists.txt  Game.cpp  Game.h  avlTree.h  main.cpp  p03F15.docx
2015/CS2420/a4/: Game.h  HashTable.cpp  HashTable.h  data.cpp  game0.txt  game1.txt  game2.txt  game3.txt  game4.txt  main  main.cpp  (+1 more)
2015/CS3430/: README.md
2016/cs3100/: .gitignore  README.md
2016/cs3100/assignment-2/: CMakeLists.txt  README.md  Utils.hpp  main.cpp
2016/cs3100/assignment-8-simulator-part-1/: CMakeLists.txt  Global.cpp  Global.hpp  Task.cpp  Task.hpp  main.cpp  readme.md
2016/cs3450/: README.md  SpadesLogic.cpp  SpadesLogic.hpp
2016/cs4700/: bacon.txt
C++/: README.md
C++/CS1400/: README.md
C++/CS1410/: README.md
c#/: README.md
python/inClass/: .1:27.py.swp  1:15.py  1:20.py  1:22.py  1:27.py  1:29.py  2:10.py  2:3.py  2:5.py  function.py
python/untitled folder/: square.py
pythonPerl/: README.md
pythonPerl/finalProject/: djangoCommands.py
pythonPerl/inClass/: user_input.py
pythonPerl/untitled folder/: square.py
sophomore/c#/: README.md
sql/: mis2100.txt  sqlConnectionTest.js
(+881 files in other folders)
