cmake_minimum_required(VERSION 2.8.9)
project (cs3100_assignment_7)
aux_source_directory(. SRC_LIST)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE ${SRC_LIST})
add_executable(main ${SOURCE})
